<resources>
    <string name="app_name" translatable="false">MyConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="scripts" translatable="false">Scripts</string>
    <string name="back">..</string>
    <string name="command">comando:</string>
    <string name="output">salida:</string>
    <string name="run">ejecutar</string>
    <string name="search">Buscar</string>
    <string name="add_script">Añadir script</string>
    <string name="add_script_name">Elige un nombre</string>
    <string name="add_script_name_hint">Nombre</string>
    <string name="add_script_enter_command">Introduce el comando:</string>
    <string name="add_script_enter_command_hint">cmd</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="usuario">Usuario</string>
    <string name="puerto">Puerto</string>
    <string name="nombreServidor">Nombre servidor</string>
    <string name="datosServidor">Añade los datos de tu servidor:</string>
    <string name="addServidor">Añadir servidor</string>
    <string name="contrasena">Contraseña</string>
    <string name="servidorExistente">Ese nombre de servidor ya existe, piense en otro.</string>
    <string name="servidorCreado">¡Servidor creado!</string>
    <string name="path" translatable="false">Path</string>
    <string name="file">Archivos</string>
    <string name="connectRefused">Conexión rechazada, compruebe la conexión del servidor.</string>
    <string name="usuarioVacio">El usuario no puede estar vacío.</string>
    <string name="contraVacia">La contraseña no puede estar vacía</string>
    <string name="servidorVacio">El nombre del servidor no puede estar vacío.</string>
    <string name="servidorLargo">El nombre del servidor no puede tener más de 20 letras.</string>
    <string name="hostPattern">El formato del host es incorrecto.</string>
    <string name="eliminar">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="saveData">Guardar datos</string>
    <string name="nuevaContra">Nueva contraseña</string>
    <string name="eliminarServer">¿Estás seguro/a de que quieres eliminar el servidor?</string>
    <string name="serverInfo">Datos del servidor:</string>
    <string name="volver">Volver</string>
    <string name="servidorEditado">¡Los datos del servidor han sido editados!</string>
    <string name="meteContraseña">Inserte la contraseña:</string>
    <string name="aceptar">Aceptar</string>
    <string name="sshFailConnect">Tiempo de espera para la conexión demasiado largo.</string>
    <string name="saveFile">Guardar archivo</string>
    <string name="fileUpdated">¡El archivo ha sido actualizado!</string>
    <string name="create">Crear</string>
    <string name="createFolderFile">Crea una carpeta o un archivo</string>
    <string name="name">Nombre</string>
    <string name="folder">Carpeta</string>
    <string name="archivo">Archivo</string>
    <string name="nameEmpty">El nombre no puede estar vacío.</string>
    <string name="selectOption">¡Qué no se te olvide especificar que quieres crear!</string>
    <string name="folderCreated">La carpeta se ha creado!</string>
    <string name="fileCreated">El archivo ha sido creado!</string>
    <string name="access_password">Acceder con contraseña</string>
    <string name="username_or_email">Usuario o email</string>
    <string name="authSuccessful">Auntenticación con éxito</string>
    <string name="sudo_password">Introduce contraseña sudo</string>
    <string name="languages">Idioma</string>
    <string name="notify_script">Notificar resultado del script</string>
    <string name="password">Contraseña</string>
    <string name="server_list_user">Usuario:</string>
    <string name="server_list_host" translatable="false">Host:</string>
    <string name="command_no_dots">comando</string>
    <string name="servers">Servidores</string>
    <string name="username">Nombre de usuario</string>
    <string name="repeat_password">Repite contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registro</string>
    <string name="or">O</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="access">Acceder</string>
    <string name="choose_file">Elige un archivo</string>
    <string name="insert_email_username">Introduce un email o un nombre de usuario</string>
    <string name="password_validity">La contraseña tiene que tener al menos 8 caracteres</string>
    <string name="invalid_credentials">Usuario o contraseña incorrectos</string>
    <string name="server_error">Error interno del servidor, intente más tarde</string>
    <string name="reset_message">Introduce el email en el que quieras recibir el mensaje</string>
    <string name="email_sent">¡Mensaje enviado!</string>
    <string name="error_sending_email">Hubo un error enviando el email</string>
    <string name="email_validity">Introduce un email válido</string>
    <string name="password_dont_match">Las contraseñas no coinciden</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="email_exists">El email ya existe</string>
    <string name="script_added">Script añadido</string>
    <string name="error_script_added">Error añadiendo el script</string>
    <string name="script_deleted">Script eliminado</string>
    <string name="error_script_deleted">Error eliminando el script</string>
    <string name="success">se ejecutó correctamente</string>
    <string name="fail">falló</string>
    <string name="account">Cuenta</string>
    <string name="delete_account">Borrar cuenta</string>
    <string name="account_deleted">Cuenta borrada</string>
    <string name="error_deleting_user">Error borrando cuenta</string>
    <string name="not_logged">Inicia sesión primero</string>
    <string name="sure_delete_account">¿Seguro que quieres eliminar la cuenta?</string>
    <string name="server_connection_lost">Notificar pérdida de la conexión con el servidor</string>
    <string name="server_connect_added">El servidor debe estar accesible para poder añadirlo</string>
    <string name="connection_lost">Perdida de conexión</string>
    <string-array name="languages">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="wrongPath">No existe el path que has escrito.</string>
    <string name="bigFile">El archivo es muy grande, si quiere verlo todo, descargelo.</string>
    <string name="saveDownload">Selecciona donde guardar la descarga:</string>
    <string name="download">Descargar</string>
    <string name="fileDownload">Archivo descargado</string>
    <string name="download_1">El archivo</string>
    <string name="download_2">ha sido descargado.</string>
    <string name="copy">Copiar</string>
    <string name="move">Mover</string>
    <string name="moveTo">Mover a...</string>
    <string name="copyTo">Copiar a...</string>
    <string name="completePath">Por favor, escriba el path absoluto.</string>
    <string name="noPath">No existe el path.</string>
    <string name="imageFile">No se puede mostrar el contenido del archivo.</string>
    <string name="badFileType">No se puede subir ese tipo de archivo.</string>
    <string name="port22" translatable="false">22</string>
    <string name="host" translatable="false">Host</string>
    <string name="notPem">El archivo escogido no es un \'.pem\'.</string>
    <string name="settings">configuración</string>
    <string name="disconnect">desconectarse</string>
    <string name="pemButton">Obtener .pem</string>
    <string name="accessPem">Acceder con un fichero .pem</string>
    <string name="editWithPassword">Editar con contraseña</string>
    <string name="editWithPem">Editar con un fichero .pem</string>
    <string name="keyPem" translatable="false">Key .pem</string>
    <string name="email" translatable="false">Email</string>
    <string name="terminal" translatable="false">Terminal</string>
    <string name="conexion">¿Quiere comprobar la conexión ahora?</string>
    <string name="removeServer">Eliminar servidor</string>
    <string name="perdidaConexion">Se ha perdido la conexión a internet, por favor compruebe que todo está bien.</string>
    <string name="hostUnreachable">El host es inalcanzable, compruebe si es el correcto.</string>
    <string name="authFail">Autenticación fallida.</string>
    <string name="noPassword">¡Qué no se te olvide añadir la contraseña o el .pem!</string>
    <string name="changeName">Cambiar nombre</string>
    <string name="exit">Salir</string>
    <string name="scriptNameInvalidLong">El nombre del script tiene que tener menos de 255 caracteres</string>
    <string name="scriptNameInsert">Introduce un nombre para el script</string>
    <string name="scriptCmdInsert">Introduce un comando</string>
    <string name="insertUsername">Insert a username</string>
    <string name="invalidPort">El valor máximo aceptado es 65535.</string>
    <string name="actionToDo">Seleccione la acción a realizar.</string>
</resources>