<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="278dp">

        <TextView
            android:id="@+id/textNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/createFolderFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newName"
            android:layout_width="299dp"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/name"
            android:theme="@style/EditTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNew" />

        <Button
            android:id="@+id/createButton"
            style="@style/Buttons"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraDialog" />

        <Button
            android:id="@+id/volverNewButton"
            style="@style/Buttons"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newName"
            app:layout_constraintVertical_bias="1.0" />

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="412dp"
            android:layout_height="78dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/volverNewButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newName">


            <RadioButton
                android:id="@+id/radioButtonFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/folder"
                app:layout_constraintBottom_toTopOf="@+id/volverNewButton"
                app:layout_constraintEnd_toStartOf="@+id/radioButtonFile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newName" />

            <RadioButton
                android:id="@+id/radioButtonFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archivo"
                app:layout_constraintBottom_toTopOf="@+id/createButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButtonFolder"
                app:layout_constraintTop_toBottomOf="@+id/newName" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>