<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServerInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/labarra"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/down_border_with_background"
            android:elevation="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/serverInfo"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/usuarioInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint='@string/usuario'
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/hostInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/host"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/puertoInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/puerto"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/nombreServidorInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/nombreServidor"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editarServidorInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/saveData"
                    android:textColor="#000000"
                    app:strokeColor="#000000"
                    app:strokeWidth="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|right"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/volverInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/volver"
                        android:textColor="#000000"
                        app:strokeColor="#000000"
                        app:strokeWidth="2dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>